test/good/21.cc
int main()
{
    int x;
    {
        return x;
    }
    return x;
}