test/bad/21.cc
int main()
{
    int x;
}

int fn()
{
    int y = 10;
    // No return! :o
}